index.css
/* Importing Google Fonts - Inter */
@import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
}

body {
  width: 100%;
  min-height: 100%;
  background-color: #1a1a1a;
  margin: 0;
  padding: 0;
  color: #eee; /*  light text */
  font-family: "Inter", sans-serif;

  display: flex;
  flex-direction: column;


}

#banner {
  background-image: url("images/banner.png");
  background-size: cover; 
  background-position: center; 
  width: 100%;
  height: 80vh;
  display: flex; 
  align-items:  center;
  justify-content: flex-start; 
  padding-left: 5%;           
  color: #fff;
  position: relative;
}

#banner::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100px;
  pointer-events: none;
  background: linear-gradient(to bottom, rgba(26, 26, 26, 0), rgba(26, 26, 26, 1));
}


nav#nav1 {
  width: 100%;
  background-color: black;
  position: sticky;
  top: 0;
  z-index: 1000;
}

nav#nav1 .container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

nav#nav1 a {
  flex: 1;
  text-align: center;
  padding: 15px 0;
  font-size: 2rem; 
  font-weight: bold;
  text-decoration: none;
  color: white;
}

nav#nav1 a:hover {
  color: rgb(173,12,12);
  background-color: rgb(43,43,43);
  text-decoration: underline;
}

#Senior-Programming-Portfolio {
  text-align: left;
  font-size: 3.5rem;
  max-width: 875px;
  overflow: hidden;
  margin-top: -60px;
  
}


@media (max-width: 875px) {

  #banner {
    justify-content: center; 
    padding-left: 0;
    text-align: center;
  }

  #Senior-Programming-Portfolio {
    font-size: 2rem;
  }

}

#banner-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding-right: 15%;
}

#pfp {
  width: 20vw;  
  height: auto; 
  max-width: 400px; 
  object-fit: cover;
}

/* Card Styles */
.card-wrapper {
  max-width: 1400px;
  margin: 0 60px 35px;
  padding: 20px 10px;
  overflow: hidden;
}

.card-list .card-item {
  list-style: none;
}

.card-list .card-item .card-link {
  user-select: none;
  display: block;
  background-color: #fff;
  padding: 18px;
  border-radius: 12px;
  text-decoration: none;
  border: 2px solid transparent;
  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
  transition: 0.2s ease;
}

.card-list .card-item .card-link:active {
  cursor: grabbing;
}

.card-list .card-item .card-link:hover {
  border-color: #5372f0;
  box-shadow: 0 15px 15px rgba(83, 114, 240, 0.2);
}

.card-list .card-link .card-image {
  width: 100%;
  aspect-ratio: 16 / 9;
  object-fit: cover;
  border-radius: 10px;
}

.card-list .card-link .badge {
  color: #5372f0;
  padding: 8px 16px;
  font-size: 0.95rem;
  font-weight: 500;
  margin: 16px 0 18px;
  background: #DDE4FF;
  width: fit-content;
  border-radius: 50px;
}

.card-list .card-link .card-title {
  font-size: 1.19rem;
  font-weight: 600;
  color: #000000;
}

.card-list .card-link .card-button {
 height: 35px;
 width: 35px;
 border-radius: 50%;
 margin: 30px 0 5px;
 color: #5372f0;
 background: none;
 cursor: pointer;
 border: 2px solid #5372f0;
 transform: rotate(-45deg);
 transition: 0.4s ease;
}

.card-list .card-link:hover .card-button {
  color: #fff;
  background: #5372f0;
}

.card-wrapper .swiper-pagination-bullets {
  height: 13px;
  width: 13px;
  opacity: 0.5;
  /* background: #5372f0; */
}

.card-wrapper .swiper-pagination-bullets-active {
  opacity: 1;
}

.card-wrapper .swiper-slide-button{
  color: #5372f0;
  margin-top: -35px;
}

/* Inactive bullets */
.swiper-pagination-bullet {
  background-color: #ccc;  
  opacity: 0.5;             
}

/* Active bullet */
.swiper-pagination-bullet-active {
  background-color: #5372f0; 
  opacity: 1;
}

.card-item:hover video {
  play: auto;
}

.card-image {
  width: 100%;
  height: 200px; 
  object-fit: cover;
  border-radius: 10px;

  border: 0px solid #000000; 
}

@media screen and (max-width: 768px) {
  .card-wrapper {
    margin: 0 10px 25px;
  }

  .card-wrapper .swiper-slide-button {
    display: none;
  }

  
/* @media (max-width: 768px) {
  .card-container .card-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

} */

  
}
/* ----------------------------- */

#project-overview {
  text-align: center;
  margin: 60px 0 30px;
}

#project-overview h1 {
  font-size: 2.5rem;
  font-weight: 700;
  position: relative;
  display: inline-block;
}



#projects {
  text-align: center;
  margin: clamp(40px, 6vw, 80px) 0 20px;
}

#projects h1 {
  font-size: 2.5rem;     
  font-weight: 700;
  display: inline-block;  
  position: relative;
  color: #fff;
}
  

/*Tabs---------------- */

.tabs-section {
  display: grid;
  grid-template-columns: 200px 1fr 1fr;
  gap: clamp(15px, 3vw, 30px);
  padding: clamp(20px, 5vw, 60px);
  max-width: 1400px;
  margin: auto;
}

.tabs {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.tabs button {
  padding: 15px;
  border: none;
  background: #2a2a2a;
  color: white;
  cursor: pointer;
  font-size: 16px;
  transition: 0.3s;
  border-radius: 8px;
}

.tabs button:hover {
  background: #5372f0;
}

.tabs button.active {
  background: #5372f0;
  color: white;
}

.info, .image {
  background: #2a2a2a;
  padding: 20px;
  border-radius: 12px;
}

.tab-content,
.image img {
  display: none;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.tab-content.active,
.image img.active {
  display: block;
  opacity: 1;
}

.image img {
  width: 100%;
  border-radius: 10px;
  object-fit: cover;
} 

